--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+#Database configuration: mysql
+
+spring.datasource.url=jdbc:mysql://localhost:3306/myhiber
+spring.datasource.username=root
+spring.datasource.password=1234567890
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#hibernate configuration
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
